# serde_arrays

./: COPYRIGHT  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  nested.rs  serializable.rs  wrapper.rs
tests/: deserialize.rs  serialize.rs  serialize_nested.rs
tests/common/: mod.rs  nested.rs
