[package]
name = "serde_arrays"
version = "0.1.0"
authors = ["Travis Veazey <travisvz@gmail.com>"]
edition = "2018"
resolver = "2"                                                                                                      # New resolver keeps the dev-dependencies features separate
description = "A simple module to support serializing and deserializing const generic or arbitrarily-large arrays."
repository = "https://github.com/Kromey/serde_arrays"
license = "MIT OR Apache-2.0"
keywords = ["serde", "serialization", "const-generics"]
categories = ["encoding"]
exclude = ["/.github/*"]

[dependencies]
serde = { version = "1.0.219", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
